# deeplabcut-analysis

./: .gitignore  LICENSE  README.md  analysis.html  dataset.html  index.html  requirements.txt  sample_script.ipynb  setup.cfg  setup.py  utility.html  ymaze.html
html/: dataset.html  utility.html
pyDLCbehavior/: __init__.py  analysis.py  dataset.py  ymaze.py
scripts/: YMaze_analysis.ipynb  novel_object_analysis.ipynb
src/pyDLCbehavior/: __init__.py  analysis.py  dataset.py  utility.py  ymaze.py
