[metadata]
name = pyDLCbehavior
version = 0.1.0
author=Chung-Kuan Chen
author_email=b97b01045@gmail.com
description = Packaging sample project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/lycantrope/deeplabcut-analysis

[options]
package_dir=
    =src
packages=find:
install_requires=
        numpy
        pandas
        matplotlib
        xlrd
        opencv-python
        scipy
        ruamel.yaml
        ipython
        easydict
        tqdm

[options.packages.find]
where=src
